--- a/index.html
+++ b/index.html
@@ -167,6 +167,6 @@ function removeTask(rowNumber) {
         console.error('Error removing task:', error);
     });
 }
-
+</script>
 </body>
 </html>
