--- a/index.html
+++ b/index.html
@@ -59,20 +59,11 @@
             background: rgba(0, 0, 0, 0.5);
             z-index: 999;
         }
-        .remove-button {
-            background-color: red;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        .remove-button:hover {
-            background-color: darkred;
-        }
     </style>
 </head>
 
 <body onload="onLoadFunction()">
-    <h1>Fetch Data from Lambda</h1>
+    <h1>Employee Tasks</h1>
     <div id="data-container">Loading data...</div>
 
     <br>
@@ -81,7 +72,22 @@
     <!-- Popup for removing tasks -->
     <div id="popup" class="popup">
         <h3>Remove Task</h3>
-        <div id="popupTableContainer"></div>
+        <table id="popupTable">
+            <thead>
+                <tr>
+                    <th>Row Number</th>
+                    <th>Employee Name</th>
+                    <th>Task Description</th>
+                    <th>Start Date</th>
+                    <th>End Date</th>
+                    <th>Remarks</th>
+                    <th>Remove</th>
+                </tr>
+            </thead>
+            <tbody id="popupTaskList">
+                <!-- Tasks will be populated here -->
+            </tbody>
+        </table>
         <button class="button" onclick="closePopup()">Close</button>
     </div>
 
@@ -89,84 +95,109 @@
     <div id="overlay" class="overlay" onclick="closePopup()"></div>
 
     <script>
+
+        // Fetch data from Lambda and populate the table
         function onLoadFunction() {
             console.log("Page has loaded.");
             fetchDataFromLambda();
         }
 
+        // Fetch the data from Lambda endpoint
         function fetchDataFromLambda() {
-            const apiUrl = 'https://0cyyhx4ika.execute-api.ap-south-1.amazonaws.com/S1/deepshikatest123';
+            const apiUrl = 'https://0cyyhx4ika.execute-api.ap-south-1.amazonaws.com/S1/deepshikatest123';  
 
             fetch(apiUrl)
-                .then(response => response.text())  // Use .text() to handle HTML response
+                .then(response => response.text())
                 .then(data => {
-                    console.log("Fetched HTML data:", data);
-                    document.getElementById('data-container').innerHTML = data;  // Insert HTML into the container
+                    document.getElementById('data-container').innerHTML = data;
+                    populatePopupTable();
                 })
                 .catch(error => {
                     console.error('Error fetching data:', error);
-                    const container = document.getElementById('data-container');
-                    container.innerHTML = 'Failed to load data. Please check the console for details.';
+                    document.getElementById('data-container').innerHTML = 'Failed to load data.';
                 });
         }
 
+        // Populate the popup with tasks and a remove button for each task
+        function populatePopupTable() {
+            const tableBody = document.querySelector('#data-container table tbody');
+            const popupTaskList = document.getElementById('popupTaskList');
+
+            if (!tableBody) {
+                console.error('Table body not found.');
+                return;
+            }
+
+            // Clear the popup task list before populating
+            popupTaskList.innerHTML = '';
+
+            // Iterate through each row in the table
+            const rows = tableBody.querySelectorAll('tr');
+            rows.forEach((row, index) => {
+                const employeeName = row.cells[0].innerText;
+                const taskDescription = row.cells[1].innerText;
+                const startDate = row.cells[2].innerText;
+                const endDate = row.cells[3].innerText;
+                const remarks = row.cells[4].innerText;
+
+                const newRow = document.createElement('tr');
+
+                newRow.innerHTML = `
+                    <td>${index + 1}</td>
+                    <td>${employeeName}</td>
+                    <td>${taskDescription}</td>
+                    <td>${startDate}</td>
+                    <td>${endDate}</td>
+                    <td>${remarks}</td>
+                    <td><button class="remove-button" onclick="removeTask(${index + 1})">X</button></td>
+                `;
+
+                popupTaskList.appendChild(newRow);
+            });
+        }
+
+        // Show the popup
         function showPopup() {
-    const tableHtml = document.getElementById('data-container').innerHTML;
-    const tempDiv = document.createElement('div');
-    tempDiv.innerHTML = tableHtml;
-
-    const rows = tempDiv.querySelectorAll('tr');
-    rows.forEach((row, index) => {
-        if (index === 0) {
-            const headerCell = document.createElement('th');
-            headerCell.innerText = "Remove";
-            row.appendChild(headerCell);
-        } else {
-            const removeCell = document.createElement('td');
-            const removeButton = document.createElement('button');
-            removeButton.innerText = 'X';
-            removeButton.classList.add('remove-button');
-            removeButton.onclick = function() {
-                const rowNumber = index; // Index is 1-based, which matches the Lambda function logic
-                removeTask(rowNumber);
-            };
-            removeCell.appendChild(removeButton);
-            row.appendChild(removeCell);
+            document.getElementById('popup').style.display = 'block';
+            document.getElementById('overlay').style.display = 'block';
         }
-    });
 
-    document.getElementById('popupTableContainer').innerHTML = tempDiv.innerHTML;
-    document.getElementById('popup').style.display = 'block';
-    document.getElementById('overlay').style.display = 'block';
-}
-
-function removeTask(rowNumber) {
-    const apiUrl = 'https://1yowx334wb.execute-api.ap-south-1.amazonaws.com/A1/Test4R'; // Replace with your Lambda API Gateway URL
-
-    fetch(apiUrl, {
-        method: 'DELETE',
-        headers: {
-            'Content-Type': 'application/json',
-        },
-        body: JSON.stringify({
-            rowNumber: rowNumber
-        })
-    })
-    .then(response => response.json())
-    .then(data => {
-        if (data.success) {
-            alert('Task removed successfully');
-            // Refresh the table or update the UI accordingly
-            fetchDataFromLambda();
-            closePopup();
-        } else {
-            alert('Error removing task');
+        // Close the popup
+        function closePopup() {
+            document.getElementById('popup').style.display = 'none';
+            document.getElementById('overlay').style.display = 'none';
         }
-    })
-    .catch(error => {
-        console.error('Error removing task:', error);
-    });
-}
-</script>
+
+        // Remove a task by row number
+        function removeTask(rowNumber) {
+            const apiUrl = 'https://oje3cr7sy2.execute-api.ap-south-1.amazonaws.com/default/RemoveTask';  // Replace with your actual Lambda API Gateway URL
+
+            // Send the DELETE request to the Lambda function
+            fetch(apiUrl, {
+                method: 'DELETE',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({
+                    rowNumber: rowNumber
+                })
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    alert('Task removed successfully');
+                    // Refresh the data after task removal
+                    fetchDataFromLambda();
+                    closePopup();
+                } else {
+                    alert('Error removing task: ' + data.error);
+                }
+            })
+            .catch(error => {
+                console.error('Error removing task:', error);
+                alert('Error removing task');
+            });
+        }
+    </script>
 </body>
 </html>
