--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
         // Remove a task by row number
         function removeTask(rowNumber) {
-            const apiUrl = 'https://oje3cr7sy2.execute-api.ap-south-1.amazonaws.com/V1/RemoveTask';  // Replace with your actual Lambda API Gateway URL
+            const apiUrl = 'https://75hlybegqd.execute-api.ap-south-1.amazonaws.com/A1/Removetask';  // Replace with your actual Lambda API Gateway URL
 
             // Send the DELETE request to the Lambda function
             fetch(apiUrl, {
