--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         }
     // Remove a task by row number with no-cors mode
     function removeTask(rowNumber) {
-        const apiUrl = 'https://your-api-endpoint';  // Replace with your actual Lambda API Gateway URL
+        const apiUrl = 'https://7ngbj4ovke.execute-api.ap-south-1.amazonaws.com/default/RemoveTask';  // Replace with your actual Lambda API Gateway URL
 
         // Send the DELETE request to the Lambda function in no-cors mode
         fetch(apiUrl, {
@@ -194,24 +194,6 @@
         });
     }
 
-    // Fetch data from Lambda (unchanged)
-    function fetchDataFromLambda() {
-        const apiUrl = 'https://your-api-endpoint';  // Replace with your actual API endpoint URL
-
-        fetch(apiUrl, {
-            method: 'GET',
-            mode: 'no-cors'  // Set the fetch mode to no-cors for data fetching
-        })
-        .then(response => {
-            // Since we can't read the response in no-cors mode, manually update the page (if needed)
-            document.getElementById('data-container').innerHTML = 'Task list refreshed (no-cors)';
-            populatePopupTable();
-        })
-        .catch(error => {
-            console.error('Error fetching data:', error);
-            document.getElementById('data-container').innerHTML = 'Failed to load data due to no-cors mode.';
-        });
-    }
 </script>
 </body>
 </html>
