--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         }
    // Remove a task by row number
         function removeTask(rowNumber) {
-            const apiUrl = 'https://7ngbj4ovke.execute-api.ap-south-1.amazonaws.com/default/RemoveTask';  // Replace with your actual Lambda API Gateway URL
+            const apiUrl = ' https://oje3cr7sy2.execute-api.ap-south-1.amazonaws.com/V1/RemoveTask';  // Replace with your actual Lambda API Gateway URL
 
             // Send the DELETE request to the Lambda function
             fetch(apiUrl, {
