--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <br>
     <button class="button" onclick="showPopup()">Remove Task</button>
-    <button class="button" onclick="showPopup()">Add Task</button>
+    <button class="button" onclick="showPopup1()">Add Task</button>
 
     <!-- Popup for removing tasks -->
     <div id="popup" class="popup">
