--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -61,17 +61,16 @@
         }
     </style>
 </head>
-
 <body onload="onLoadFunction()">
     <h1>Employee Tasks</h1>
     <div id="data-container">Loading data...</div>
 
     <br>
-    <button class="button" onclick="showPopup1()">Remove Task</button>
-    <button class="button" onclick="showPopup()">Add Task</button>
+    <button class="button" onclick="showAddPopup()">Add Task</button>
+    <button class="button" onclick="showRemovePopup()">Remove Task</button>
 
-        <!-- Popup for adding tasks -->
-    <div id="popup" class="popup">
+    <!-- Popup for adding tasks -->
+    <div id="addPopup" class="popup">
         <h3>Add New Task</h3>
         <form id="taskForm" action="https://tfyct2zj8k.execute-api.ap-south-1.amazonaws.com/A1/test3" method="POST" enctype="application/x-www-form-urlencoded">
             <label for="employeeName">Employee Name:</label>
@@ -90,46 +89,44 @@
             <input type="text" id="Remarks" name="Remarks"><br><br>
 
             <button class="button" type="submit">Add</button>
-            <button class="button" type="button" onclick="closePopup()">Cancel</button>
+            <button class="button" type="button" onclick="closePopup('addPopup')">Cancel</button>
         </form>
     </div>
 
-    <!-- Overlay for popup -->
-    <div id="overlay" class="overlay" onclick="closePopup()"></div>
-
-    <!-- Success message popup -->
-    <div id="messagePopup" class="popup">
-        <p id="messageContent"></p>
-        <button class="button" onclick="closeMessagePopup()">Close</button>
-    </div>
-
     <!-- Popup for removing tasks -->
-    <div id="popup" class="popup">
+    <div id="removePopup" class="popup">
         <h3>Remove Task</h3>
         <table id="popupTable">
             <thead>
+                <tr>
+                    <th>Task</th>
+                    <th>Remove</th>
+                </tr>
             </thead>
             <tbody id="popupTaskList">
                 <!-- Tasks will be populated here -->
             </tbody>
         </table>
-        <button class="button" onclick="closePopup()">Close</button>
+        <button class="button" onclick="closePopup('removePopup')">Close</button>
     </div>
 
     <!-- Overlay for popup -->
-    <div id="overlay" class="overlay" onclick="closePopup()"></div>
+    <div id="overlay" class="overlay" onclick="closeOverlay()"></div>
+
+    <!-- Success message popup -->
+    <div id="messagePopup" class="popup">
+        <p id="messageContent"></p>
+        <button class="button" onclick="closePopup('messagePopup')">Close</button>
+    </div>
 
     <script>
-
-        // Fetch data from Lambda and populate the table
         function onLoadFunction() {
             console.log("Page has loaded.");
             fetchDataFromLambda();
         }
 
-        // Fetch the data from Lambda endpoint
         function fetchDataFromLambda() {
-            const apiUrl = 'https://0cyyhx4ika.execute-api.ap-south-1.amazonaws.com/S1/deepshikatest123';  
+            const apiUrl = 'https://0cyyhx4ika.execute-api.ap-south-1.amazonaws.com/S1/deepshikatest123';
 
             fetch(apiUrl)
                 .then(response => response.text())
@@ -143,7 +140,54 @@
                 });
         }
 
-        // Populate the popup with tasks and a remove button for each task
+        function showAddPopup() {
+            document.getElementById('addPopup').style.display = 'block';
+            document.getElementById('overlay').style.display = 'block';
+        }
+
+        function showRemovePopup() {
+            document.getElementById('removePopup').style.display = 'block';
+            document.getElementById('overlay').style.display = 'block';
+        }
+
+        function closePopup(popupId) {
+            document.getElementById(popupId).style.display = 'none';
+            closeOverlay();
+        }
+
+        function closeOverlay() {
+            document.getElementById('overlay').style.display = 'none';
+        }
+
+        document.getElementById('taskForm').onsubmit = async function(event) {
+            event.preventDefault(); // Prevent the default form submission
+
+            const form = event.target;
+            const formData = new FormData(form);
+            const params = new URLSearchParams(formData).toString();
+
+            try {
+                const response = await fetch(form.action, {
+                    method: form.method,
+                    headers: {
+                        'Content-Type': form.enctype
+                    },
+                    body: params
+                });
+
+                const result = await response.json();
+                document.getElementById('messageContent').innerText = result.message;
+                document.getElementById('messagePopup').style.display = 'block';
+                document.getElementById('overlay').style.display = 'block';
+
+                closePopup('addPopup'); // Close the add task popup
+            } catch (error) {
+                document.getElementById('messageContent').innerText = 'Error: ' + error.message;
+                document.getElementById('messagePopup').style.display = 'block';
+                document.getElementById('overlay').style.display = 'block';
+            }
+        };
+
         function populatePopupTable() {
             const tableBody = document.querySelector('#data-container table tbody');
             const popupTaskList = document.getElementById('popupTaskList');
@@ -153,55 +197,36 @@
                 return;
             }
 
-            // Clear the popup task list before populating
             popupTaskList.innerHTML = '';
 
-            // Copy rows from the main table to the popup
             const rows = tableBody.querySelectorAll('tr');
             rows.forEach((row, index) => {
-                const clonedRow = row.cloneNode(true);  // Clone the existing row from the main table
+                const clonedRow = row.cloneNode(true);
                 const removeButtonCell = document.createElement('td');
                 
-                removeButtonCell.innerHTML = `<button class="remove-button" onclick="removeTask(${index + 1})">X</button>`;
-                clonedRow.appendChild(removeButtonCell);  // Add the remove button to the cloned row
+                removeButtonCell.innerHTML = `<button class="button" onclick="removeTask(${index + 1})">X</button>`;
+                clonedRow.appendChild(removeButtonCell);
                 
-                popupTaskList.appendChild(clonedRow);  // Append the cloned row to the popup
+                popupTaskList.appendChild(clonedRow);
             });
         }
 
-        // Show the popup
-        function showPopup() {
-            document.getElementById('popup').style.display = 'block';
-            document.getElementById('overlay').style.display = 'block';
-        }
-
-        // Close the popup
-        function closePopup() {
-            document.getElementById('popup').style.display = 'none';
-            document.getElementById('overlay').style.display = 'none';
-        }
-
-        // Remove a task by row number
         function removeTask(rowNumber) {
             const apiUrl = 'https://oje3cr7sy2.execute-api.ap-south-1.amazonaws.com/V1/RemoveTask';  // Replace with your actual Lambda API Gateway URL
 
-            // Send the DELETE request to the Lambda function
             fetch(apiUrl, {
                 method: 'DELETE',
                 headers: {
                     'Content-Type': 'application/json',
                 },
-                body: JSON.stringify({
-                    rowNumber: rowNumber
-                })
+                body: JSON.stringify({ rowNumber })
             })
             .then(response => response.json())
             .then(data => {
                 if (data.success) {
                     alert('Task removed successfully');
-                    // Refresh the data after task removal
-                    fetchDataFromLambda();
-                    closePopup();
+                    fetchDataFromLambda(); // Refresh the data after task removal
+                    closePopup('removePopup');
                 } else {
                     alert('Error removing task: ' + data.error);
                 }
