--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <script>
         function fetchTasks() {
             const employeeId = document.getElementById('employeeId').value;
-            const lambdaUrl = `https://wvufe1ks9c.execute-api.ap-south-1.amazonaws.com/default/Test5`; // Replace with your actual API Gateway URL
+            const lambdaUrl = ` https://wvufe1ks9c.execute-api.ap-south-1.amazonaws.com/S1/Test5`; // Replace with your actual API Gateway URL
 
             fetch(lambdaUrl)
                 .then(response => response.text())
