--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <script>
         function fetchLambdaResponse() {
-            const apiUrl = 'https://your-api-gateway-url.amazonaws.com/your-lambda-endpoint'; // Replace with your Lambda endpoint
+            const apiUrl = 'https://imf44ag3d4.execute-api.ap-south-1.amazonaws.com/default/Test5'; // Replace with your Lambda endpoint
 
             fetch(apiUrl)
                 .then(response => response.json()) // Assuming the Lambda function returns JSON
